2009-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/web/ejabberd_web.erl, src/web/ejabberd_http.erl: Add
	documentation stub for some types. This will be filled later.

	* src/jlib.erl: Document the short JID type.

2009-02-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_auth.erl, src/ejabberd_auth_anonymous.erl,
	src/ejabberd_auth_external.erl, src/ejabberd_auth_internal.erl,
	src/ejabberd_auth_ldap.erl, src/ejabberd_auth_odbc.erl,
	src/ejabberd_auth_pam.erl: Document the type of the argument(s) and
	the returned type of every functions.

	* src/ejabberd_auth.erl, src/ejabberd_auth_anonymous.erl: Add
	guardians expression to many functions to ensure at an early stage
	that we were given the right arguments. Other modules are not changed
	because they are only used by ejabberd_auth which already does the
	check.

2009-01-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/api/Makefile: Disable "TODO:" interpretation in eDoc because
	usually, the following text isn't in eDoc format.

2009-01-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/cyrsasl.erl, src/cyrsasl_plain.erl, src/cyrsasl_anonymous.erl,
	src/cyrsasl_digest.erl:  Document every functions to clarify the types
	to give and returned.

	* src/ejabberd_c2s.erl: exmpp_server_sasl:next_step/1 returns the
	mechanism as list() again, so the call to binary_to_list/1 isn't
	necessary anymore.

2009-01-23  Badlop  <badlop@process-one.net>

	* src/odbc/mysql.sql: Fix complain about comment syntax
	* src/odbc/pg.sql: Likewise

2009-01-22  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/ejabberd_sm.erl: Fix typo (node -> lnode).

	* src/ejabberd_c2s.erl: Reuse the domain in binary() format to
	make the jid.

2009-01-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/web/ejabberd_web_admin.erl, src/ejabberd_listener.erl: Fix some
	eDoc @spec directives.

	* src/ejabberd_sm.erl (get_vh_session_list/1): Remove a bad